--- a/rails/contribeer/Gemfile
+++ b/rails/contribeer/Gemfile
@@ -27,6 +27,20 @@ gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
 
+gem 'grape'
+gem 'grape-entity'
+gem 'dotenv-rails'
+# gem 'httpclient'
+# gem 'newrelic_rpm'
+# gem 'rack-contrib'
+# gem 'grape-swagger'
+# gem 'grape-swagger-rails'
+# gem 'websocket-rails'
+gem 'jazz_hands'
+gem 'rails_admin'
+gem 'paypal-sdk-rest'
+gem 'pry-rails'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
